--- a/stk3.html
+++ b/stk3.html
@@ -24,7 +24,7 @@
 
     <div class="top-wrapper">
       <div class="container">
-          <h1>satsukisanのWEBページです</h1>
+          <h1>stkのWEBページです</h1>
           <h3>WEBページ作るなんて、久しぶりです！</h3>
           <a href="#" class="btn twitter"><span class="fab fa-twitter"></span>follow me.</a>
                       
